Melhorias em testes